# narrafind

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
narrafind/: __init__.py  base_embedder.py  chunker.py  cli.py  embedder.py  gemini_embedder.py  search.py  store.py  transcriber.py  trimmer.py
narrafind/web/: __init__.py  app.py
narrafind/web/static/: app.js  style.css
narrafind/web/templates/: index.html
tests/: conftest.py  test_chunker.py  test_search.py  test_store.py  test_transcriber.py
